# Damaris

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CTestTestfile.cmake  DEVGUIDE  Doxyfile  cmake_clean.sh  make_clean.sh
examples/: CMakeLists.txt  Example.cpp  Example_lib.cpp  README.md  example.xml
examples/ascent/: ascent_python_render_example.py
examples/fortran/: CMakeLists.txt  cube.f90  cube.xml  cube.xml.in  run.sh
examples/paraview/: CMakeLists.txt  image.cpp  image.xml  lollipop.cpp  lollipop.xml  plate.cpp  plate.py  plate.xml  run.sh  sector.cpp  sector.xml
examples/plugin/: CMakeLists.txt  gc.cpp
examples/python/: .3dmesh_py.xml.kate-swp  2d_dask_array.py  2d_dask_array_lists.py  3dmesh_dask.py  3dmesh_dask.xml  3dmesh_dask_incvar.py  3dmesh_dask_incvar.xml  3dmesh_dask_stats.py  3dmesh_dask_stats.xml  3dmesh_py.c  3dmesh_py.py  3dmesh_py.xml  3dmesh_py_domains.c  3dmesh_py_domains_stats.c  CMakeLists.txt  README.md  dask_online_stats.py  stats_3dmesh_dask.py  stats_3dmesh_dask.xml  stats_3dmesh_py_domians.c  stats_finalize.sh  stats_get_results.py  stats_launch_dask.sh  stats_launch_one_job.sh  stats_launch_scheduler.sh  stats_launcher.sh  test_dask_blocks.py
examples/storage/: 2dmesh.c  2dmesh.xml  3dmesh.c  3dmesh.xml  CMakeLists.txt  blocks-hdf5.c  blocks-hdf5.xml  life-hdf5.c  life-hdf5.xml  mandelbulb-hdf5.c  mandelbulb-hdf5.xml  run.sh  vector.c  vector.xml
examples/unstructured_mesh/: code_saturne_damaris.xml  damaris_slice_xy_csv.py
examples/visit/: CMakeLists.txt  blocks.c  blocks.xml.in  cmd.xml.in  curve.xml.in  life.c  life.xml.in  mandelbulb.c  mandelbulb.xml.in  mesh.c  mesh.xml.in  point.c  point.xml.in  run  run.sh  var.xml.in
lib/: CMakeLists.txt  CTestTestfile.cmake  DamarisConfig.cmake.in  damaris.pc.in  damaris.pc.in.oirig  make-pc-file.sh
python/: CMakeLists.txt  __init__.py  damaris_comm.cpp
python/damaris4py/: README.md  setup.py
test/: CMakeLists.txt  README.md  TestAction.cpp  TestAction.hpp  TestActionManager.cpp  TestActionManager.hpp  TestBuffer.cpp  TestBuffer.hpp  TestChannel.cpp  TestChannel.hpp  TestDataSpace.hpp  TestEventLogger.cpp  TestEventLogger.hpp  TestLayoutManager.hpp  TestModifyModel.cpp  TestModifyModel.hpp  TestModifyModelParallel.cpp  TestModifyModelParallel.hpp  TestReactor.cpp  TestReactor.hpp  TestVariable.cpp  TestVariable.hpp  TestVariableManager.cpp  TestVariableManager.hpp  placement_loc_4dc_s0_s0_b0_m0001.xml  placement_loc_4dc_s0_s0_b0_m1001.xml  placement_loc_4dc_s0_s0_b0_m100100.xml  placement_loc_4dc_s0_s4_b1.xml  placement_loc_4dc_s0_s4_b4.xml  placement_loc_8dc_s0_s2_b1.xml  placement_loc_8dc_s0_s4_b2.xml  placement_loc_8dc_s1_s4_b2.xml  run_on_remote.sh  test.xml  test_modify.xml
trunk/: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  INSTALL  Makefile  README  build-dependencies  cmake_install.cmake
trunk/client/: CMakeLists.txt  Client.F90  Client.cpp  Client.h  Client.hpp  ClientC.cpp  ClientConfiguration.cpp  ClientConfiguration.hpp  ClientFortran.cpp  ClientFortran.hpp  Definition.cpp  Definition.hpp  Makefile  StdAloneClient.cpp  StdAloneClient.hpp  cmake_install.cmake
trunk/comm/: Channel.hpp  CollectiveRPC.hpp  Communication.hpp  MPILayer.hpp  MPISendRecvQueue.cpp  MPISendRecvQueue.hpp  RPC.hpp  SharedMessageQueue.cpp  SharedMessageQueue.hpp
trunk/common/: Action.cpp  Action.hpp  ActionsManager.cpp  ActionsManager.hpp  ActionsSet.hpp  BehaviorManager.cpp  BehaviorManager.hpp  Calc.hpp  Chunk.cpp  Chunk.hpp  ChunkDescriptor.cpp  ChunkDescriptor.hpp  ChunkHandle.hpp  ChunkHeader.cpp  ChunkHeader.hpp  ChunkSet.hpp  Communication.hpp  ConfigHandler.cpp  ConfigHandler.hpp  Configurable.hpp  Configuration.cpp  Configuration.hpp  Debug.hpp  DynamicAction.cpp  DynamicAction.hpp  Environment.cpp  Environment.hpp  Group.cpp  Group.hpp  Identified.hpp  Language.hpp  Layout.cpp  Layout.hpp  LayoutFactory.cpp  LayoutFactory.hpp  Manager.hpp  Message.hpp  MetadataManager.cpp  MetadataManager.hpp  NodeAction.cpp  (+30 more)
trunk/core/: Action.hpp  ActionManager.cpp  ActionManager.hpp  ActionSet.hpp  ActionsManager.cpp  ActionsManager.hpp  Calc.hpp  Chunk.cpp  ChunkHeader.hpp  Communication.hpp  Configurable.hpp  CurveManager.cpp  CurveManager.hpp  Debug.hpp  DynamicAction.cpp  DynamicAction.hpp  Environment.cpp  Environment.hpp  GarbageCollector.hpp  Identified.hpp  Language.cpp  Language.hpp  LayoutManager.cpp  LayoutManager.hpp  MPILayer.hpp  Manager.hpp  MeshManager.cpp  MeshManager.hpp  Message.hpp  NodeAction.cpp  NodeAction.hpp  Observable.cpp  Observable.hpp  Observer.cpp  Observer.hpp  Parameter.cpp  Parameter.hpp  ParameterManager.cpp  ParameterManager.hpp  ProcInfo.cpp  (+19 more)
trunk/data/: BoxLayout.cpp  BoxLayout.hpp  Chunk.cpp  Chunk.cpp.old  Chunk.hpp  Chunk.hpp.old  ChunkDescriptor.cpp  ChunkDescriptor.hpp  ChunkHeader.hpp  ChunkImpl.cpp  ChunkImpl.hpp  ChunkSet.hpp  Curve.cpp  Curve.hpp  CurvilinearMesh.cpp  CurvilinearMesh.hpp  DataSpace.hpp  Layout.cpp  Layout.hpp  Mesh.cpp  Mesh.hpp  Parameter.cpp  Parameter.hpp  PointMesh.cpp  PointMesh.hpp  Position.hpp  RectilinearMesh.cpp  RectilinearMesh.hpp  ShmChunk.cpp  ShmChunk.hpp  TypeLayout.cpp  TypeLayout.hpp  Types.cpp  Types.hpp  Variable.cpp  Variable.hpp
trunk/event/: Action.cpp  Action.hpp  BoundAction.cpp  BoundAction.hpp  DynamicAction.cpp  DynamicAction.hpp  NodeAction.cpp  NodeAction.hpp  ScriptAction.cpp  ScriptAction.hpp
trunk/examples/: CMakeLists.txt  CTestTestfile.cmake  Example.cpp  Makefile  cmake_install.cmake  config.xml  example.xml  fun.xml  mpi.xml  param.xml  script.py  test.c  test.f90  test_alloc.c  test_alloc.f90  test_event.c  test_fun.cpp  test_mpi.c  test_mpi.f90  test_param.c
trunk/hdf5/: HDF5Plugin.cpp  HDF5Writer.cpp
trunk/include/: Damaris.h  Damaris.hpp
trunk/lib/: CMakeLists.txt
trunk/memory/: Buffer.hpp  Channel.hpp  Message.hpp  SharedMemorySegment.cpp  SharedMemorySegment.hpp  SharedMessageQueue.cpp  SharedMessageQueue.hpp
trunk/nbproject/: configurations.xml  project.xml
trunk/old/: Chunk.hpp  ClientConfiguration.hpp  ConfigHandler.cpp  Configuration.cpp  Configuration.hpp  (+7 more)
(+1712 files in other folders)
